# roundtrip_modelling

./: CMakeLists.txt  CMakePresets.json  Estimator.cpp  Estimator.h  ExponentialEstimator.cpp  ExponentialEstimator.h  LL3Estimator.cpp  LL3Estimator.h  LN3Estimator.cpp  LN3Estimator.h  LogLogisticEstimator.cpp  LogLogisticEstimator.h  LogNormalEstimator copy.cpp  LogNormalEstimator.cpp  LogNormalEstimator.h  Model.h  OnlineRANSAC.cpp  OnlineRANSAC.h  README.md  blog.txt  fzero.m  main.cpp  matplotlibcpp.h  online_ransac.cpp  online_ransac.h
alglib/: alglibinternal.cpp  alglibinternal.h  alglibmisc.h  ap.cpp  ap.h  diffequations.cpp  fasttransforms.cpp  integration.cpp  kernels_avx2.cpp  kernels_fma.cpp  kernels_sse2.h  solvers.cpp  solvers.h
matlab/: AlgBernoulli.m  ExperimentCatalog.m  ExperimentCatalogFind.m  ExperimentFactorDefs.m  ExperimentGet.m  ExponentialFit.m  ExponentialGof.m  ExponentialToExpectation.m  ExponentialToVariance.m  LoglogisticCdf.m  LoglogisticFit.m  LoglogisticGoF.m  LoglogisticPdf.m  LoglogisticRnd.m  LoglogisticToEV.m  LoglogisticToVariance.m  Loglogistic_fittingfunctions.c  Loglogistic_fittingfunctions.mexw64  Loglogistic_fittingfunctions_mejorada_por_problemas_de_computo200320.c  LognormalFit.m  LognormalGof.m  LognormalPdf.m  LognormalRnd.m  LognormalToEV.m  ModelCdf.m  ModelColor.m  ModelGof.m  ModelPdf.m  ModelToCoeffs.m  PerformanceDef.m  PerformanceOfAlgInScenario.m  PerformanceShow.m  ReqCheckInModel.m  ReqCreate.m  ScenarioShow.m  access_deepest_field.m  drawHisto.m  exp2_samples.txt  get_structfields_as_vector.m  ll3_samples.txt  (+14 more)
matlab/dataset/: tyrell_roundtrip001_metadata.txt  tyrell_roundtrip002_metadata.txt  tyrell_roundtrip003.csv  tyrell_roundtrip003_metadata.txt  tyrell_roundtrip005.csv  tyrell_roundtrip006.csv  tyrell_roundtrip006_metadata.txt  tyrell_roundtrip007_metadata.txt  tyrell_roundtrip010_metadata.txt  tyrell_roundtrip011.csv  tyrell_roundtrip011_metadata.txt  tyrell_roundtrip012.csv  tyrell_roundtrip012_metadata.txt  tyrell_roundtrip013.csv  tyrell_roundtrip013_metadata.txt  tyrell_roundtrip014_metadata.txt  tyrell_roundtrip015.csv  tyrell_roundtrip016.csv  tyrell_roundtrip016_metadata.txt  tyrell_roundtrip017.csv  tyrell_roundtrip018.csv  tyrell_roundtrip019_metadata.txt  tyrell_roundtrip020.csv  tyrell_roundtrip020_metadata.txt  tyrell_roundtrip021_metadata.txt  tyrell_roundtrip022.csv  tyrell_roundtrip022_metadata.txt  tyrell_roundtrip023_metadata.txt  tyrell_roundtrip024.csv  tyrell_roundtrip025_metadata.txt  tyrell_roundtrip027.csv  tyrell_roundtrip027_metadata.txt  tyrell_roundtrip028.csv  tyrell_roundtrip029_metadata.txt  tyrell_roundtrip030.csv  tyrell_roundtrip030_metadata.txt  tyrell_roundtrip032.csv  tyrell_roundtrip032_metadata.txt  tyrell_roundtrip033.csv  tyrell_roundtrip034.csv  (+3 more)
onlineransac/: .gitignore  CMakeLists.txt  CMakePresets.json  Estimator.cpp  Estimator.h  ExponentialEstimator.cpp  ExponentialEstimator.h  LogLogisticEstimator.cpp  LogLogisticEstimator.h  LogNormalEstimator.cpp  LogNormalEstimator.h  Model.h  OnlineRANSAC.cpp  OnlineRANSAC.h  README.md  main.cpp  matplotlibcpp.h  misc.cpp
onlineransac/alglib/: alglibmisc.cpp  dataanalysis.cpp  dataanalysis.h  diffequations.h  fasttransforms.h  integration.h  interpolation.cpp  interpolation.h  kernels_avx2.h  kernels_fma.h  kernels_sse2.cpp  linalg.cpp  linalg.h  optimization.h  specialfunctions.cpp  specialfunctions.h  statistics.cpp  statistics.h
onlineransac/matlab/: ADstatistic.m  AlgCatalog.m  AlgOnlineransac.m  ConstantsInit.m  ExperimentCatalog.m  ExperimentFactors.m  ExperimentPrint.m  ExponentialCdf.m  ExponentialCheckParms.m  ExponentialFit.m  ExponentialGof.m  ExponentialPdf.m  ExponentialRnd.m  ExponentialToExpectation.m  ExponentialToMode.m  ExponentialToVariance.m  LOADPROJECT.m  LoglogisticCheckParms.m  LoglogisticFit.m  LoglogisticFromEV.m  LoglogisticGoF.m  LoglogisticLikelihood.m  LoglogisticPdf.m  LoglogisticProb.m  LoglogisticRnd.m  LoglogisticToEV.m  LoglogisticToExpectation.m  LoglogisticToMode.m  Loglogistic_fittingfunctions.mexa64  Loglogistic_fittingfunctions.mexw32  Loglogistic_fittingfunctions.mexw64  Loglogistic_fittingfunctions_mejorada_por_problemas_de_computo200320.c  LognormalCdf.m  LognormalCheckParms.m  LognormalFit.m  LognormalGof.m  LognormalPdf.m  LognormalRnd.m  LognormalToEV.m  LognormalToExpectation.m  (+61 more)
onlineransac/matlab/dataset/: tyrell_roundtrip004.csv  tyrell_roundtrip004_metadata.txt  tyrell_roundtrip005_metadata.txt  tyrell_roundtrip007.csv  tyrell_roundtrip008.csv  tyrell_roundtrip008_metadata.txt  tyrell_roundtrip009.csv  tyrell_roundtrip009_metadata.txt  tyrell_roundtrip010.csv  tyrell_roundtrip014.csv  tyrell_roundtrip015_metadata.txt  tyrell_roundtrip017_metadata.txt  tyrell_roundtrip018_metadata.txt  tyrell_roundtrip019.csv  tyrell_roundtrip021.csv  tyrell_roundtrip023.csv  tyrell_roundtrip024_metadata.txt  tyrell_roundtrip025.csv  tyrell_roundtrip026.csv  tyrell_roundtrip026_metadata.txt  tyrell_roundtrip028_metadata.txt  tyrell_roundtrip029.csv  tyrell_roundtrip031.csv  tyrell_roundtrip031_metadata.txt  tyrell_roundtrip033_metadata.txt  tyrell_roundtrip035.csv  tyrell_roundtrip036.csv
onlineransac/matlab/datos experimentos/experimentos cipri feb 2025/: 20250207_120754static_experiment.txt  20250207_120754static_experiment_datos.txt  20250210_123759moving_robot.txt  20250210_123759moving_robot_datos.txt  matlab_moving_robot_data.mat  matlab_static_data.mat
onlineransac/matlab/datos experimentos/paper sensors open ana gago/: sc1-18_conjuntosdefinitivos.mat  sc1.txt  sc10.txt  sc11.txt  sc12.txt  sc13.txt  sc14.txt  sc15.txt  sc16.txt  sc17.txt  sc18.txt  sc2.txt  sc3.txt  sc4.txt  sc5.txt  sc6.txt  sc7.txt  sc8.txt  sc9.txt
onlineransac/tests/: LogLogisticTests.cpp  LogNormalTests.cpp
regulators/: README.md
statebasedransac/: README.md
test/online-ransac/: CMakeLists.txt  README.md
test/online-ransac/src/: main.cpp
test/online-ransac/tests/: online_ransac_test.cpp
tests/: ExponentialTests.cpp  LogLogisticTests.cpp  LogNormalTests.cpp
(+16 files in other folders)
